--- a/segor/src/main/resources/templates/home.html
+++ b/segor/src/main/resources/templates/home.html
@@ -3,6 +3,7 @@
 <head><title>Home</title></head>
 <body>
 <h2>Selamat datang!</h2>
+<td th:text="${user.role}"></td>
 <p>Ini halaman setelah login.</p>
 </body>
 </html>
