Added *Logout feature

--- a/segor/src/main/resources/templates/home.html
+++ b/segor/src/main/resources/templates/home.html
@@ -5,5 +5,7 @@
 <h2>Selamat datang!</h2>
 <td th:text="${user.role}"></td>
 <p>Ini halaman setelah login.</p>
+<!-- Tambahkan di mana saja pada halaman home.html -->
+<a th:href="@{/logout}">Logout</a>
 </body>
 </html>
