--- a/segor/src/main/resources/templates/gor/create.html
+++ b/segor/src/main/resources/templates/gor/create.html
@@ -3,18 +3,29 @@
 
 <head>
     <title>Create GOR</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 
 <body>
-    <h2>Create New GOR</h2>
-    <form th:action="@{/gor/save}" th:object="${gor}" method="post" enctype="multipart/form-data">
-        <form th:action="@{/gor/save}" method="post" enctype="multipart/form-data" th:object="${gor}">
-            Nama: <input type="text" th:field="*{nama}" required /><br />
-            Alamat: <input type="text" th:field="*{alamat}" required /><br />
-            Gambar: <input type="file" name="imgFile" accept=".png,.jpg,.jpeg" required /><br />
-            <button type="submit">Simpan</button>
-        </form>
-        <a th:href="@{/gor/list}">Back to List</a>
+    <form th:action="@{/gor/save}" th:object="${gor}" method="post" enctype="multipart/form-data" class="form-container">
+        <h2>Create New GOR</h2>
+        <div class="form-group">
+            <label for="nama">Nama:</label>
+            <input type="text" th:field="*{nama}" id="nama" required class="form-input" />
+        </div>
+        <div class="form-group">
+            <label for="alamat">Alamat:</label>
+            <input type="text" th:field="*{alamat}" id="alamat" required class="form-input" />
+        </div>
+        <div class="form-group">
+            <label for="imgFile">Gambar:</label>
+            <input type="file" name="imgFile" id="imgFile" accept=".png,.jpg,.jpeg" required class="form-input" />
+        </div>
+        <div class="form-actions">
+            <button type="submit" class="button">Simpan</button>
+            <a th:href="@{/gor/list}" class="button-back">Back to List</a>
+        </div>
+    </form>
 </body>
 
 </html>
