--- a/segor/src/main/resources/templates/gor/edit.html
+++ b/segor/src/main/resources/templates/gor/edit.html
@@ -3,24 +3,33 @@
 
 <head>
     <title>Edit GOR</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
 
 <body>
-    <h2>Edit GOR</h2>
-    <form th:action="@{'/gor/update/' + ${gor.id}}" th:object="${gor}" method="post" enctype="multipart/form-data">
+    <form th:action="@{'/gor/update/' + ${gor.id}}" th:object="${gor}" method="post" enctype="multipart/form-data" class="form-container">
+        <h2>Edit GOR</h2>
         <input type="hidden" th:field="*{id}" />
-        <label>Nama:</label>
-        <input type="text" th:field="*{nama}" required /><br />
-        <label>Alamat:</label>
-        <input type="text" th:field="*{alamat}" required /><br />
-        <label>Img:</label>
-        <input type="file" name="imgFile" accept=".png,.jpg,.jpeg" /><br />
-        <div th:if="*{img}">
-            <img th:src="@{'/gor/img/' + ${gor.id}}" alt="GOR Image" width="100" />
+        <div class="form-group">
+            <label for="nama">Nama:</label>
+            <input type="text" th:field="*{nama}" id="nama" required class="form-input" />
         </div>
-        <button type="submit">Update</button>
+        <div class="form-group">
+            <label for="alamat">Alamat:</label>
+            <input type="text" th:field="*{alamat}" id="alamat" required class="form-input" />
+        </div>
+        <div class="form-group">
+            <label for="imgFile">Gambar:</label>
+            <input type="file" name="imgFile" id="imgFile" accept=".png,.jpg,.jpeg" class="form-input" />
+        </div>
+        <div class="form-group gor-img" th:if="*{img}">
+            <img th:src="@{'/gor/img/' + ${gor.id}}" alt="GOR Image" width="100" class="img"/>
+        </div>
+        <div class="form-actions">
+            <button type="submit" class="button">Update</button>
+            <a th:href="@{/gor/list}" class="button-back">Back to List</a>
+        </div>
     </form>
-    <a th:href="@{/gor/list}">Back to List</a>
 </body>
 
 </html>
