--- a/segor/src/main/resources/templates/lapangan/lapangan.html
+++ b/segor/src/main/resources/templates/lapangan/lapangan.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <title>Lapangan List</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}" />
 </head>
-<body>
+
+<body class="body-gor">
     <h2>Daftar Lapangan</h2>
-    <a th:href="@{'/lapangan/create?id_gor=' + ${id_gor}}">Tambah Lapangan</a>
-    <table border="1">
+    <a th:href="@{'/lapangan/create?id_gor=' + ${id_gor}}" class="button">Tambah Lapangan</a>
+    <table class="table-lapangan">
         <thead>
             <tr>
-                <th>ID</th>
+                <th>No</th>
                 <th>Jenis</th>
                 <th>Tarif</th>
                 <th>Status</th>
@@ -18,21 +21,26 @@
             </tr>
         </thead>
         <tbody>
-            <tr th:each="lapangan : ${lapangans}">
-                <td th:text="${lapangan.id}"></td>
+            <tr th:if="${#lists.isEmpty(lapangans)}">
+                <td colspan="6" style="text-align:center;">Tidak ada lapangan tersedia.</td>
+            </tr>
+            <tr th:each="lapangan, iterStat : ${lapangans}">
+                <td th:text="${iterStat.index + 1}"></td>
                 <td th:text="${lapangan.jenis}"></td>
                 <td th:text="${lapangan.tarif}"></td>
                 <td th:text="${lapangan.status}"></td>
                 <td th:text="${lapangan.deskripsi}"></td>
-                <td>
-                    <a th:href="@{'/lapangan/edit/' + ${lapangan.id}}">Edit</a>
+                <td class="table-actions row">
+                    <a th:href="@{'/lapangan/edit/' + ${lapangan.id}}" class="button-edit">Edit</a>
                     <form th:action="@{'/lapangan/delete/' + ${lapangan.id}}" method="post" style="display:inline;">
-                        <button type="submit" onclick="return confirm('Yakin hapus?')">Delete</button>
+                        <button type="submit" onclick="return confirm('Yakin hapus?')"
+                            class="button-delete">Delete</button>
                     </form>
                 </td>
             </tr>
         </tbody>
     </table>
-    <a th:href="@{/gor/list}">Kembali ke Daftar GOR</a>
+    <a th:href="@{/gor/list}" class="button-back">Kembali ke Daftar GOR</a>
 </body>
+
 </html>
