--- a/segor/src/main/resources/templates/logreg/login.html
+++ b/segor/src/main/resources/templates/logreg/login.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head><title>Login</title></head>
+<head>
+    <title>Slide Navbar</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/logreg.css}">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
+</head>
 <body>
-<h2>Login</h2>
-<p th:text="${error}"></p>
-<form th:action="@{/login}" method="post">
-    Nama: <input type="text" name="nama"/><br/>
-    Password: <input type="password" name="password"/><br/>
-    <button type="submit">Login</button>
-</form>
-<a th:href="@{/register}">Belum punya akun? Daftar</a>
+	<div class="main">  	
+		<input type="checkbox" id="chk" aria-hidden="true">
+			<div class="signup">
+				<form th:action="@{/register}" method="post">
+					<label for="chk" aria-hidden="true">Sign up</label>
+                    <input type="text" name="nama" placeholder="Nama" required="">
+					<input type="password" name="password" placeholder="Password" required="">
+					<button type="submit">Submit</button>
+				</form>
+			</div>
+
+			<div class="login">
+				<form th:action="@{/login}" method="post">
+					<label for="chk" aria-hidden="true">Login</label>
+					<input type="text" name="nama" placeholder="Nama" required="">
+					<input type="password" name="password" placeholder="Password" required="">
+					<button type="submit">Login</button>
+				</form>
+			</div>
+	</div>
 </body>
 </html>
