--- a/segor/src/main/resources/templates/gor/gor.html
+++ b/segor/src/main/resources/templates/gor/gor.html
@@ -7,6 +7,7 @@
 </head>
 
 <body class="body-gor">
+    <div th:replace="fragments/navbar :: main-navbar"></div>
     <h2>List of GOR</h2>
     <a th:href="@{/gor/create}" class="button">Tambah GOR</a>
     
