--- a/segor/src/main/resources/templates/lapangan/lapangan.html
+++ b/segor/src/main/resources/templates/lapangan/lapangan.html
@@ -7,6 +7,7 @@
 </head>
 
 <body class="body-gor">
+    <div th:replace="fragments/navbar :: main-navbar"></div>
     <h2>Daftar Lapangan</h2>
     <a th:href="@{'/lapangan/create?id_gor=' + ${id_gor}}" class="button">Tambah Lapangan</a>
     <table class="table-lapangan">
