--- a/segor/src/main/resources/templates/logreg/index.html
+++ b/segor/src/main/resources/templates/logreg/index.html
@@ -128,49 +128,10 @@
                Dengan antarmuka yang sederhana dan intuitif, Anda dapat dengan mudah 
                menemukan GOR yang sesuai dengan kebutuhan Anda. Baik untuk acara olahraga, 
                turnamen, atau latihan, SEGOR menyediakan berbagai pilihan GOR di seluruh Indonesia.
+               Segera daftar untuk melakukan sewa!!!!!.
               </h3>
             </div>
-            <div class="flex flex-wrap justify-center gap-4 pt-10 pb-16">
-              <button
-                type="button"
-                class="inline-flex items-center justify-center gap-2 rounded-full border border-blue-800 bg-blue-800 px-6 py-4 leading-6 font-semibold text-white hover:border-blue-700/50 hover:bg-blue-700/50 hover:text-white focus:ring-3 focus:ring-blue-500/50 focus:outline-hidden active:border-blue-700 active:bg-blue-700"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 20 20"
-                  fill="currentColor"
-                  data-slot="icon"
-                  class="hi-mini hi-arrow-right inline-block size-5 opacity-50"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M3 10a.75.75 0 0 1 .75-.75h10.638L10.23 5.29a.75.75 0 1 1 1.04-1.08l5.5 5.25a.75.75 0 0 1 0 1.08l-5.5 5.25a.75.75 0 1 1-1.04-1.08l4.158-3.96H3.75A.75.75 0 0 1 3 10Z"
-                    clip-rule="evenodd"
-                  />
-                </svg>
-                <span>Get Started</span>
-              </button>
-              <button
-                type="button"
-                class="inline-flex items-center justify-center gap-2 rounded-full border border-gray-800 bg-gray-800 px-6 py-4 leading-6 font-semibold text-white hover:border-gray-700/50 hover:bg-gray-700/50 hover:text-white focus:ring-3 focus:ring-gray-500/25 focus:outline-hidden active:border-gray-700 active:bg-gray-700"
-              >
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 20 20"
-                  fill="currentColor"
-                  data-slot="icon"
-                  class="hi-mini hi-eye inline-block size-5 opacity-50"
-                >
-                  <path d="M10 12.5a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z" />
-                  <path
-                    fill-rule="evenodd"
-                    d="M.664 10.59a1.651 1.651 0 0 1 0-1.186A10.004 10.004 0 0 1 10 3c4.257 0 7.893 2.66 9.336 6.41.147.381.146.804 0 1.186A10.004 10.004 0 0 1 10 17c-4.257 0-7.893-2.66-9.336-6.41ZM14 10a4 4 0 1 1-8 0 4 4 0 0 1 8 0Z"
-                    clip-rule="evenodd"
-                  />
-                </svg>
-                <span>Live Demo</span>
-              </button>
-            </div>
+           
             <div
               class="relative mx-5 -mb-20 rounded-xl bg-white p-2 shadow-lg sm:-mb-40 lg:mx-32"
             >
