--- a/segor/src/main/resources/static/css/style.css
+++ b/segor/src/main/resources/static/css/style.css
@@ -304,7 +304,7 @@ body {
 }
 
 .nav-link {
-    color: var(--primary-light);
+    color: white;
     text-decoration: none;
     font-size: 15px;
     padding: 8px 12px;
