Add logout in navbar admin

--- a/segor/src/main/resources/templates/fragments/navbar.html
+++ b/segor/src/main/resources/templates/fragments/navbar.html
@@ -7,6 +7,7 @@
         <a class="nav-link" th:href="@{/gor/list}">GOR</a>
         <a class="nav-link" th:href="@{/lapangan/list}">Lapangan</a>
         <a class="nav-link" th:href="@{/promo/list}">Promo</a>
+        <a class="nav-link" th:href="@{/logout}">Logout</a>
     </nav>
 </body>
 </html>
