--- a/segor/src/main/resources/templates/user/gor.html
+++ b/segor/src/main/resources/templates/user/gor.html
@@ -26,7 +26,7 @@
                     </div>
                 </td>
                 <td class="table-actions row">                    
-                    <a th:href="@{'/lapangan/list/gor/' + ${gor.id}}" class="button">Lapangan List</a>                  
+                    <a th:href="@{'/lapangan/user/list/gor/' + ${gor.id}}" class="button">Lapangan List</a>                  
                 </td>
             </tr>
         </tbody>
