--- a/segor/src/main/resources/templates/user/booking.html
+++ b/segor/src/main/resources/templates/user/booking.html
@@ -9,13 +9,12 @@
 <body>
     <div th:if="${errorMessage}" class="alert alert-danger" th:text="${errorMessage}"></div>
     <div th:if="${successMessage}" class="alert alert-success" th:text="${successMessage}"></div>
-    <form th:action="@{/booking/save}" th:object="${booking}" method="post" class="form-container">
+    <form th:action="@{/booking/user/save}" th:object="${booking}" method="post" class="form-container">
         <h2>Tambah Booking</h2>
         <div class="form-group">
             <label for="lapangan">Lapangan:</label>
             <select th:field="*{lapangan}" id="lapangan" required class="form-input">
-                <option value="">Pilih Lapangan</option>
-                <option th:each="lapangan : ${lapangans}" th:value="${lapangan.id}" th:text="${lapangan.jenis}">
+                <option th:value="${lapangan.id}" th:text="${lapangan.jenis}" selected>
                 </option>
             </select>
         </div>
@@ -33,7 +32,7 @@
         </div>
         <div class="form-actions">
             <button type="submit" class="button">Simpan</button>
-            <a th:href="@{/booking/list}" class="button-back">Kembali ke Daftar Booking</a>
+            <a th:href="@{'/lapangan/user/list/gor/' + ${lapangan.gor.id}}" class="button-back">Kembali ke Daftar Booking</a>
         </div>
     </form>
 </body>
