--- a/segor/src/main/resources/templates/logreg/index.html
+++ b/segor/src/main/resources/templates/logreg/index.html
@@ -66,21 +66,7 @@
                 <a
                   href="javascript:void(0)"
                   class="inline-flex items-center gap-2 text-lg font-bold tracking-wide text-white hover:opacity-75"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 20 20"
-                    fill="currentColor"
-                    data-slot="icon"
-                    class="hi-mini hi-link inline-block size-5 opacity-50"
-                  >
-                    <path
-                      d="M12.232 4.232a2.5 2.5 0 0 1 3.536 3.536l-1.225 1.224a.75.75 0 0 0 1.061 1.06l1.224-1.224a4 4 0 0 0-5.656-5.656l-3 3a4 4 0 0 0 .225 5.865.75.75 0 0 0 .977-1.138 2.5 2.5 0 0 1-.142-3.667l3-3Z"
-                    />
-                    <path
-                      d="M11.603 7.963a.75.75 0 0 0-.977 1.138 2.5 2.5 0 0 1 .142 3.667l-3 3a2.5 2.5 0 0 1-3.536-3.536l1.225-1.224a.75.75 0 0 0-1.061-1.06l-1.224 1.224a4 4 0 1 0 5.656 5.656l3-3a4 4 0 0 0-.225-5.865Z"
-                    />
-                  </svg>
+                >                
                   <span>SEGOR</span>
                 </a>
               </div>
@@ -136,10 +122,10 @@
               class="relative mx-5 -mb-20 rounded-xl bg-white p-2 shadow-lg sm:-mb-40 lg:mx-32"
             >
               <img
-                src="assets/unsplash-4ec70e388b28.jpg"
-                alt="Hero Image"
-                class="mx-auto aspect-3/2 w-full rounded-lg object-cover"
-              />
+              src="images/home_lapang.png"
+              alt="Hero Image"
+              class="mx-auto aspect-3/2 w-full rounded-lg object-cover"
+            />
             </div>
           </div>
           <!-- END Hero Content -->
