--- a/segor/src/main/resources/static/css/style.css
+++ b/segor/src/main/resources/static/css/style.css
@@ -336,3 +336,17 @@ body {
         text-align: center;
     }
 }
+
+.gap-8 {
+    gap: 8px;
+}
+
+.link-gor {
+    text-decoration: none;
+    color: var(--primary-dark);
+    font-weight: bold;
+}
+
+.link-gor:hover {
+    color: var(--primary-light);
+}
